Updated grid layouts to use explicitly placed content to avoid unwanted gaps
When using named grid areas, the col/row gap remains even if a column or row does not have content. This causes excess white space appearing in some layouts

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -85,36 +85,15 @@ hr {
   text-align: center;
 }
 
-section
-  > :is(h1, h2, h3, h4, h5, h6, p, ul, form)
-  + :is(h1, h2, h3, h4, h5, h6, p, ul, form) {
+section > :is(h1, h2, h3, h4, h5, h6, p, ul, form) + :is(h1, h2, h3, h4, h5, h6, p, ul, form) {
   margin-top: var(--text-gap);
 }
 
 article {
   display: grid;
-  grid-template-areas: "column1" "column2" "column3" "column4";
-  grid-auto-columns: 1fr;
+  grid-template-columns: 1fr;
   grid-auto-rows: min-content;
-  grid-auto-flow: column;
-
-  // Layout columns
-
-  & > section:nth-child(2) {
-    grid-area: column1;
-  }
-
-  & > section:nth-child(3) {
-    grid-area: column2;
-  }
-
-  & > section:nth-child(4) {
-    grid-area: column3;
-  }
-
-  & > section:nth-child(5) {
-    grid-area: column4;
-  }
+  grid-auto-flow: row;
 
   // Layout styles
 
@@ -127,19 +106,108 @@ article {
   }
 
   &.one-two-one {
-    grid-template-areas: "column1 column1" "column2 column3" "column4 column4";
+    @media (min-width: 480px) {
+      grid-template-columns: repeat(2, 1fr);
+
+      & > section:nth-child(2) {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+      }
+
+      & > section:nth-child(3) {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+      }
+
+      & > section:nth-child(4) {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+      }
+
+      & > section:nth-child(5) {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+      }
+    }
   }
 
   &.two-one-one {
-    grid-template-areas: "column1 column2" "column3 column3" "column4 column4";
+
+    @media (min-width: 480px) {
+      grid-template-columns: repeat(2, 1fr);
+
+      & > section:nth-child(2) {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+      }
+
+      & > section:nth-child(3) {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+      }
+
+      & > section:nth-child(4) {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+      }
+
+      & > section:nth-child(5) {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+      }
+    }
   }
 
   &.three-one {
-    grid-template-areas: "column1 column2 column3" "column4 column4 column4";
+    @media (min-width: 480px) {
+      grid-template-columns: repeat(3, 1fr);
+
+      & > section:nth-child(2) {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+      }
+
+      & > section:nth-child(3) {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+      }
+
+      & > section:nth-child(4) {
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+      }
+
+      & > section:nth-child(5) {
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+      }
+    }
   }
 
   &.four {
-    grid-template-areas: "column1" "column2" "column3" "column4";
+    @media (min-width: 480px) {
+      grid-template-columns: repeat(4, 1fr);
+
+      & > section:nth-child(2) {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+      }
+
+      & > section:nth-child(3) {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+      }
+
+      & > section:nth-child(4) {
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+      }
+
+      & > section:nth-child(5) {
+        grid-column: 4 / 5;
+        grid-row: 1 / 2;
+      }
+    }
   }
 }
 
@@ -185,18 +253,17 @@ article[data-section-name="hero"] {
     filter: sepia(1);
   }
 }
+
 .swiper:not(.swiper-fade)::after {
   content: "";
   position: absolute;
   inset: 0;
   z-index: 1;
-  background: linear-gradient(
-    to right,
-    white 10%,
-    transparent 40%,
-    transparent 60%,
-    white 90%
-  );
+  background: linear-gradient(to right,
+      white 10%,
+      transparent 40%,
+      transparent 60%,
+      white 90%);
   pointer-events: none;
 }
 
@@ -210,3 +277,4 @@ article[data-section-name="hero"] {
   @at-root .panelBackground & {
     margin-bottom: 0;
   }
+}
